# dequant

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-torch-cuda.txt  requirements-train.txt  requirements.txt  sweep_hyperparams.sh
.github/workflows/: build.yaml  ci.yaml
max4live/: Dequant.amxd  DequantBridge.js
models/: basic_transformer_encoder.py  dataset.py
notebooks/: Preprocessing.ipynb  TrainingV1.ipynb  TrainingV2.ipynb  TrainingV3.ipynb  compute_quality_metrics.ipynb  compute_quantitative_metrics.ipynb  example.ipynb  magenta_groovae_infer.py  modelv1.ipynb  preprocessing.py
notebooks/models/: basic_transformer_encoder.py
src/: __init__.py  __main__.py  config.py
src/app/: __init__.py  engine.py  processor.py  sync.py  ui.py
src/cli/: __init__.py  app.py  common.py  dequantize.py  dequantize_rt.py  play.py  preprocess.py  quantize.py  train.py
src/config/: __init__.py
src/data/: __init__.py  drum_category.py
src/dataset/: dataset.py
src/hov/: __init__.py  converter.py  dataset.py  drum_category.py
src/inference/: predictor.py
src/model/: __init__.py  decoder.py  dequant.py  encoder.py  transformer.py
src/predict/: __init__.py
src/preprocess/: __init__.py  __main__.py  download.py  egmd.py  midi_to_hov.py
src/preprocessing/: egmd.py
src/train/: __init__.py  trainer.py
src/training/: trainer.py
src/utils/: accurate_timer.py  checkpoint.py  sliding_window_estimator.py
tests/: utils.py
tests/data/: test_dataset.py  test_hov_to_midi.py  test_midi_to_hov.py  test_pos_encoding.py  test_train_cli.py  (+2 more)
(+13 files in other folders)
