[project]
name = "dequant"
version = "0.14.13"
description = "Drum Dequantization"
authors = [
    { name = "Amon Benson", email = "amon.k.benson@campus.tu-berlin.de" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[tool.pytest.ini_options]
pythonpath = ["."]  # Include src directory as a module
addopts = ["--capture=no"]  # Always print test output

[tool.ruff]
preview = true
exclude = ["notebooks/"]
line-length = 180

[tool.ruff.lint]
# extend-select = ["I", "D", "Q"]  # Include isort and docstring checks
extend-select = ["I"]  # Include isort checks

[tool.pyright]
typeCheckingMode = "basic"
ignore = ["notebooks/magenta_groovae_infer.py"]
